[project]
name = "minigram-py"
version = "0.4.1"
description = "minimalistic telegram bot framework that can be used in AWS Lambda or anywhere"
authors = [{ name = "Grigory Bakunov", email = "bobuk@rubedo.cloud" }]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
starlette = ["starlette>=0.37.2"]
aiohttp = ["aiohttp>=3.9.3"]
httpx = ["httpx>=0.18.0"]
fastapi = ["fastapi>=0.73.0"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
